<resources>
    <string name="app_name">Family Map</string>

    <string name="hostTag">Server Host:</string>
    <string name="portTag">Server Port:</string>
    <string name="userNameTag">User Name:</string>
    <string name="passwordTag">Password:</string>
    <string name="fNameTag">First Name:</string>
    <string name="lNameTag">Last Name:</string>
    <string name="emailTag">Email:</string>
    <string name="maleButton">Male</string>
    <string name="femaleButton">Female</string>
    <string name="loginButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
    <string name="title_activity_map_fragment">Map</string>
    <string name="lifeEvents">LIFE EVENTS</string>
    <string name="familyTitle">FAMILY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map_frag">Map</string>
    <string name="title_activity_person">Person Activity</string>
    <string name="logoutLine1">Logout</string>
    <string name="logoutLine2">RETURNS TO LOGIN SCREEN</string>
    <string name="lifeStoryLine1">Life Story Lines</string>
    <string name="lifeStoryLine2">SHOW LIFE STORY LINES</string>
    <string name="familyTreeLine1">Family Tree Lines</string>
    <string name="familyTreeLine2">SHOW TREE LINES</string>
    <string name="spouseLine1">Spouse Lines</string>
    <string name="spouseLine2">SHOW SPOUSE LINES</string>
    <string name="mapTypeLine1">Map Type</string>
    <string name="mapTypeLine2">BACKGROUND DISPLAY ON MAP</string>
    <string name="resyncLine1">Re-sync Data</string>
    <string name="resyncLine2">FROM FAMILYMAP SERVICE</string>
</resources>
