<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="cs240.fammapclient.SettingsActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="12"
        android:columnCount="1">
        <TextView
            android:id="@+id/lifeStoryLine1"
            android:textSize="8pt"
            android:text="@string/lifeStoryLine1"
            />
        <TextView
            android:id="@+id/lifeStoryLine2"
            android:textSize="5pt"
            android:text="@string/lifeStoryLine2"
            />
        <TextView
            android:id="@+id/familyTreeLine1"
            android:textSize="8pt"
            android:text="@string/familyTreeLine1"
            />
        <TextView
            android:id="@+id/familyTreeLine2"
            android:textSize="5pt"
            android:text="@string/familyTreeLine2"
            />
        <TextView
            android:id="@+id/spouseLine1"
            android:textSize="8pt"
            android:text="@string/spouseLine1"
            />
        <TextView
            android:id="@+id/spouseLine2"
            android:textSize="5pt"
            android:text="@string/spouseLine2"
            />
        <TextView
            android:id="@+id/mapTypeLine1"
            android:textSize="8pt"
            android:text="@string/mapTypeLine1"
            />
        <TextView
            android:id="@+id/mapTypeLine2"
            android:textSize="5pt"
            android:text="@string/mapTypeLine2"
            />
        <TextView
            android:id="@+id/resyncLine1"
            android:textSize="8pt"
            android:text="@string/resyncLine1"
            />
        <TextView
            android:id="@+id/resyncLine2"
            android:textSize="5pt"
            android:text="@string/resyncLine2"
            />
        <TextView
            android:id="@+id/logout_line1"
            android:textSize="8pt"
            android:text="@string/logoutLine1"
            />
        <TextView
            android:id="@+id/logout_line2"
            android:textSize="5pt"
            android:text="@string/logoutLine2"
            />
    </GridLayout>
    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleLifeStory"
        android:layout_marginLeft="310dp"
        />
    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleFamilyTree"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="40dp"
        />
    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleSpouseLine"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="80dp"
        />

</FrameLayout>
