<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="cs240.fammapclient.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hostTag"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/hostTag" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:id="@+id/hostInput"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="55dp"
        android:id="@+id/portTag"
        android:text="@string/portTag" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="35dp"
        android:id="@+id/portInput"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="90dp"
        android:id="@+id/userNameTag"
        android:text="@string/userNameTag" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="70dp"
        android:id="@+id/userNameInput"
        android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="125dp"
        android:id="@+id/passwordTag"
        android:text="@string/passwordTag" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="105dp"
        android:id="@+id/passwordInput"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="160dp"
        android:id="@+id/fNameTag"
        android:text="@string/fNameTag" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="140dp"
        android:id="@+id/fNameInput"
        android:inputType="textPersonName" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="195dp"
        android:id="@+id/lNameTag"
        android:text="@string/lNameTag" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="175dp"
        android:id="@+id/lNameInput"
        android:inputType="textPersonName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="230dp"
        android:id="@+id/emailTag"
        android:text="@string/emailTag" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="210dp"
        android:id="@+id/emailInput"
        android:inputType="text"/>
    <RadioGroup
        android:id="@+id/genderButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="110dp"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maleButton"
            android:text="@string/maleButton"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/femaleButton"
            android:text="@string/femaleButton"
            />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="260dp"
        android:id="@+id/genderTag"
        android:text="Gender: " />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="@string/loginButton"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="345dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:text="@string/registerButton"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="345dp"
        />

</FrameLayout>
